fix:fix nav responsive overflow

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ nav {
   font-weight: bold;
   font-size: 1.4rem;
   border-bottom: 4px solid #e89058;
+  overflow: hidden;
 }
 
 nav ul {
